<resources>
    <string name="app_name">ImageView</string>
    <string name="vinicius_oliveira">Vinicius Oliveira</string>
    <string name="professor_na_digital_house_brasil">Professor na Digital House Brasil</string>
    <string name="s_o_paulo_vila_ol_mpia">São Paulo, Vila Olímpia</string>
    <string name="_20_583">20,583</string>
    <string name="seguidores">Seguidores</string>
    <string name="_9_112_824">9,112,824</string>
    <string name="visualiza_es">Visualizações</string>
    <string name="seguir">Seguir</string>
</resources>
